<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@drawable/landscape"
    tools:context="com.sandeep.temperatureconverter.MainActivity">

            <EditText
                android:layout_width="141dp"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editText1"
                android:layout_marginTop="16dp"
                android:hint="@string/inputText"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:layout_constraintLeft_toLeftOf="parent" />

            <EditText
                android:layout_width="139dp"
                android:layout_height="40dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:textStyle="bold"
                android:hint="@string/outputText"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:id="@+id/editText2"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                android:layout_marginEnd="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="8dp"
                android:fadeScrollbars="false"
                android:fontFamily="sans-serif"
                android:freezesText="false"
                android:hapticFeedbackEnabled="true" />

            <Button
                android:text="@string/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b1"
                android:onClick="buttonClicked"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:hapticFeedbackEnabled="true" />


            <TextView
                android:text="@string/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:fontFamily="sans-serif-smallcaps" />

            <TextView
                android:text="@string/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                android:id="@+id/textView3"
                app:layout_constraintRight_toLeftOf="@+id/editText2"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/editText1"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="84dp"
                android:id="@+id/historyText"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/b1"
                android:layout_marginStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.55"
                android:layout_marginTop="8dp" />

    <RadioGroup
        android:layout_width="360dp"
        android:layout_height="38dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp">

        <RadioButton
            android:text="@string/rb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:textColor="@color/black"
            android:checked="true"
            android:textStyle="bold"
            android:layout_weight="0.12"
            android:fontFamily="sans-serif-smallcaps" />

        <RadioButton
            android:text="@string/rb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="0.14"
            android:fontFamily="sans-serif-smallcaps" />

    </RadioGroup>

    <TextView
        android:text="@string/textHistory"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_width="90dp"
        android:layout_height="22dp"
        android:id="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/b1" />


</android.support.constraint.ConstraintLayout>
